--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,26 @@
 
         <div class="main2">
             <section><h2>Contacts</h2></section>    
-            <article><p>article</p></article>
+            <article>
+                <form>
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" name="fname"></input>
+                    <br></br>
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" name="lname"></input>
+                    <br></br>
+                    <label for="phonenum">Phone Number</label>
+                    <input type="tel" id="phonenum" name="email"></input>
+                    <br></br>
+                    <label for="Email">Email</label>
+                    <input type="email" id="email" name="email"></input>
+                    <br></br>
+                    <label for="subject">Subject</label>
+                    <input type="subject" id="subject" name="subject"></input>
+                    <br></br>
+                    <input type="submit" value="Submit">
+                </form>
+            </article>
         </div>
 
         <footer class="full">
