--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
 
         <div class="main">
             <section><h2>Home</h2></section>    
-            <article><p>article</p></article>
+            <article>
+                <video width="800" height="450" controls>
+                    <source src="media/github-ssh.mp4" type="video/mp4">
+                    Your browser does not support this video.
+                </video>
+                <h2>Playlist of Videos<h2>
+                <iframe width="800" height="450" 
+                    src="https://www.youtube.com/embed/3ZcwMPcXmNY?playlist=3ZcwMPcXmNY,cUzklzVXJwo" 
+                    title="YouTube video player" frameborder="0" 
+                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allowfullscreen></iframe>
+            </article>
         </div>
         
         <aside></aside>
