edited footer and added fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Clayland's Website - Home</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="full"><h1>Clayland's Website</h1></header>
@@ -19,12 +23,12 @@
         <div class="main">
             <section><h2>Home</h2></section>    
             <article>
-                <video width="800" height="450" controls>
+                <video width="800vw" height="450vh" controls>
                     <source src="media/github-ssh.mp4" type="video/mp4">
                     Your browser does not support this video.
                 </video>
                 <h2>Playlist of Videos<h2>
-                <iframe width="800" height="450" 
+                <iframe width="800vw" height="450vh" 
                     src="https://www.youtube.com/embed/3ZcwMPcXmNY?playlist=3ZcwMPcXmNY,cUzklzVXJwo" 
                     title="YouTube video player" frameborder="0" 
                     allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -36,6 +40,9 @@
         
         <footer class="full">
             <img src="img/logo1.png" alt="logo" class="logofooter">
+            <a href="index.html" class="footera">Home</a>
+            <a href="about.html" class="footera">About</a>
+            <a href="contacts.html" class="footera">Contacts</a>
             <a href="https://www.instagram.com/kingofclayland/">
                 <img class="media" src="img/instagram.jpeg" alt="Instagram Link">
             </a>
