--- a/about.html
+++ b/about.html
@@ -6,6 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Clayland's Website - About</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <header class="full"><h1>Clayland's Website</h1></header>
@@ -25,6 +29,9 @@
         
         <footer class="full">
             <img src="img/logo1.png" alt="logo" class="logofooter">
+            <a href="index.html" class="footera">Home</a>
+            <a href="about.html" class="footera">About</a>
+            <a href="contacts.html" class="footera">Contacts</a>
             <a href="https://www.instagram.com/kingofclayland/">
                 <img class="media" src="img/instagram.jpeg" alt="Instagram Link">
             </a>
