added hero image

--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header class="full"><h1>Clayland's Website</h1></header>
         <nav class="full">
             <img src="img/logo1.png" alt="logo" class="logoheader">
             <div class="navbar"><a class="anav" href="index.html"><h1>Home</h1></a></div>
@@ -20,12 +19,10 @@
             <div class="navbar"><a class="anav" href="contacts.html"><h1>Contacts</h1></a></div>
         </nav>
 
-        <div class="main">
+        <div class="main2">
             <section><h2>About</h2></section>    
-            <article>aside</article>
+            <article></article>
         </div>
-
-        <aside></aside>
         
         <footer class="full">
             <img src="img/logo1.png" alt="logo" class="logofooter">
