added more content

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Clayland's Website - About</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/about.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
@@ -21,7 +22,13 @@
 
         <div class="main2">
             <section><h2>About</h2></section>    
-            <article></article>
+            <article>
+                <p>Clayland loves to play golf. He currently has a 4.6 handicap, but is working to continue to improve.
+                    Check out his <a href="https://www.instagram.com/kingofclayland/" target="blank">instagram</a> 
+                    if you want to see his scores and stats.
+                </p>
+                <p>Clayland also likes to code in python or html.</p>
+            </article>
         </div>
         
         <footer class="full">
@@ -29,7 +36,7 @@
             <a href="index.html" class="footera">Home</a>
             <a href="about.html" class="footera">About</a>
             <a href="contacts.html" class="footera">Contacts</a>
-            <a href="https://www.instagram.com/kingofclayland/">
+            <a href="https://www.instagram.com/kingofclayland/" target="blank">
                 <img class="media" src="img/instagram.jpeg" alt="Instagram Link">
             </a>
         </footer>
