--- a/index.html
+++ b/index.html
@@ -30,16 +30,24 @@
         <div class="main">
             <section><h2>Home</h2></section>    
             <article>
-                <video width="800vw" height="450vh" controls>
+                <h2>Video About SSH Key and Connecting to GitHub</h2>
+                <video width="400vw" height="225vh" controls>
                     <source src="media/github-ssh.mp4" type="video/mp4">
                     Your browser does not support this video.
                 </video>
-                <h2>Playlist of Videos<h2>
-                <iframe width="800vw" height="450vh" 
-                    src="https://www.youtube.com/embed/3ZcwMPcXmNY?playlist=3ZcwMPcXmNY,cUzklzVXJwo" 
+                <br></br>
+                <h2>Playlist of Golf Videos<h2>
+                <iframe width="400vw" height="225vh" 
+                    src="https://www.youtube.com/embed/3ZcwMPcXmNY?playlist=tckhnZIbqCM,3ZcwMPcXmNY,UR5nAsLcL20"
                     title="YouTube video player" frameborder="0" 
                     allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen></iframe>
+                <br></br>
+                <h2>Home Course</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3320.728023360014!2d-117.83385368528604!3d33.
+                    664208445527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcddd8d9370825%3A0x807da1d3d7a92150!2sRancho%
+                    20San%20Joaquin%20Golf%20Course!5e0!3m2!1sen!2sus!4v1636418299660!5m2!1sen!2sus" width="400" height="225" 
+                    style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </article>
         </div>
         
