--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Clayland's Website - Contacts</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/contacts.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
@@ -24,20 +25,25 @@
             <article>
                 <form>
                     <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="fname"></input>
+                    <br>
+                    <input type="text" id="fname" name="fname" placeholder="Your first name is"></input>
                     <br></br>
                     <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lname"></input>
+                    <br>
+                    <input type="text" id="lname" name="lname" placeholder="Your last name is"></input>
                     <br></br>
                     <label for="phonenum">Phone Number</label>
-                    <input type="tel" id="phonenum" name="email"></input>
+                    <br>
+                    <input type="tel" id="phonenum" name="email" placeholder="Your phone number is"></input>
                     <br></br>
                     <label for="Email">Email</label>
-                    <input type="email" id="email" name="email"></input>
+                    <br>
+                    <input type="email" id="email" name="email" placeholder="Your email is"></input>
                     <br></br>
                     <label for="subject">Subject</label>
-                    <input type="subject" id="subject" name="subject"></input>
-                    <br></br>
+                    <br>
+                    <textarea type="subject" id="subject" name="subject" placeholder="Write here" style="width:100em; height:20em;"></textarea>
+                    <br>
                     <input type="submit" value="Submit">
                 </form>
             </article>
@@ -48,7 +54,7 @@
             <a href="index.html" class="footera">Home</a>
             <a href="about.html" class="footera">About</a>
             <a href="contacts.html" class="footera">Contacts</a>
-            <a href="https://www.instagram.com/kingofclayland/">
+            <a href="https://www.instagram.com/kingofclayland/" target="blank">
                 <img class="media" src="img/instagram.jpeg" alt="Instagram Link">
             </a>
         </footer>
