made the hero image and text clearer

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </nav>
 
         <header class="full" style="background-image:url('img/tigerwoods.png');
-        background-repeat:no-repeat;
-        background-size:cover;">
-            <h1 style="margin:0; font-size:5em; color:#000000; position:absolute; top:2.5em; left:2.75em;">Clayland's Website</h1>
+            background-repeat:no-repeat;
+            background-size:cover;">
+            <h1 class="herotext">Clayland's Website</h1>
         </header>
         
 
